// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TLPBadge should handle proper value 1`] = `
<DocumentFragment>
  <span
    class="euiBadge emotion-euiBadge"
    style="background-color: rgb(109, 204, 177); color: rgb(0, 0, 0);"
    title="Green"
  >
    <span
      class="euiBadge__content emotion-euiBadge__content"
    >
      <span
        class="euiBadge__text emotion-euiBadge__text"
      >
        Green
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TLPBadge should handle value in various casing with extra spaces 1`] = `
<DocumentFragment>
  <span
    class="euiBadge emotion-euiBadge"
    style="background-color: rgb(255, 126, 98); color: rgb(0, 0, 0);"
    title="Red"
  >
    <span
      class="euiBadge__content emotion-euiBadge__content"
    >
      <span
        class="euiBadge__text emotion-euiBadge__text"
      >
        Red
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TLPBadge should return - if color doesn't exist 1`] = `
<DocumentFragment>
  -
</DocumentFragment>
`;
